@startuml

left to right direction

class Usuario {
    int id
    String nome
    String email
    String senha
}

class Aluno {
    String matricula
    String curso
    List<Disciplina> disciplinasObrigatorias
    List<Disciplina> disciplinasOptativas
    +matricularDisciplina(Disciplina disciplina, boolean obrigatoria)
    +cancelarMatricula(Disciplina disciplina)
}

class Professor {
    +verAlunosMatriculados(Disciplina disciplina): List<Aluno>
}

class Curriculo {
    String curso
    int semestre
    int ano
    List<Turma> turmas
    List<Disciplina> disciplinasObrigatorias
    List<Disciplina> disciplinasOptativas
    +gerarCurriculo(Aluno aluno)
}

class Secretaria {
    List<Curriculo> curriculos
    +gerarCurriculo(Aluno aluno)
    +criarDisciplina(List<Disciplina> disciplinas, String codigo, String nome, int numCred)
}

class Disciplina {
    String codigo
    String nome
    int numCred

}

class Turma {
    String status
    int min
    int max
    List<Aluno> alunos
    Professor professor
    +adicionarAluno(Aluno aluno)
    +removerAluno(Aluno aluno)
    +isCheia(): boolean
    +isAtiva(): boolean
}

Aluno --> Secretaria
Usuario <|-- Aluno
Usuario <|-- Professor
Aluno "many" --o "one" Turma
Turma "many" o-- "one" Professor
Turma --o Curriculo
Disciplina "1" --> "many" Turma
Curriculo "many" --o "one" Secretaria

@enduml